--- a/Download BDTRE.ipynb
+++ b/Download BDTRE.ipynb
@@ -115,28 +115,28 @@
     "get_municipality_codes <- function(selected_province) {\n",
     "    \n",
     "    # download the csv table from the ISTAT website (the link should be permanent)\n",
-    "    data <- read.csv(\"https://www.istat.it/storage/codici-unita-amministrative/Elenco-comuni-italiani.csv\", \n",
-    "                     header=FALSE, stringsAsFactors=FALSE, fileEncoding=\"latin1\", sep = ';')\n",
+    "    data <- read.csv(\"https://www.istat.it/storage/codici-unita-amministrative/Elenco-comuni-italiani.csv\",\n",
+    "                   header=FALSE, stringsAsFactors=FALSE, fileEncoding=\"latin1\", sep = ';')\n",
     "    \n",
-    "    # get new data frame with only relevant columns\n",
+    "    # get a new data frame with only the relevant columns\n",
     "    data_new <- data[, c(\"V1\", \"V3\", \"V5\", \"V7\")]\n",
     "    \n",
-    "    # rename the columns of the dataframe\n",
+    "    # rename the columns of the data frame\n",
     "    colnames(data_new) <- c(\"Cod_Reg\", \"Cod_Prov\", \"Cod_Mun\", \"Name_Mun\")\n",
     "    \n",
     "    # delete the first row of the data frame\n",
     "    data_new <- data_new[- 1, ]\n",
     "    \n",
-    "    # list of the number provinces\n",
+    "    # list of the provinces numbers\n",
     "    province_code <- unique(data_new$Cod_Prov)\n",
     "    \n",
-    "    # get the codes just for the municipalities inside the region of the geoportal\n",
+    "    # get the codes for just the municipalities inside the region of the Geo portal\n",
     "    piemonte_municipalities <- data_new[which(data_new$Cod_Reg=='01'), ]\n",
     "    piemonte_municipalities$Cod_Reg <- NULL\n",
     "    \n",
     "    if (selected_province %in% province_code) {\n",
     "        \n",
-    "        # select the mucipality codes by province\n",
+    "        # select the municipality codes by province\n",
     "        piemonte_municipalities <- piemonte_municipalities[which(piemonte_municipalities$Cod_Prov == selected_province), ]\n",
     "    \n",
     "    } else if (selected_province == \"All\") {\n",
@@ -200,8 +200,8 @@
     "download_municipality <- function(municipality_number) {\n",
     "    \n",
     "    # create a count of the total number of municipalities to download\n",
-    "    total <- nrow(municipality_number)    \n",
-    "    counter <- 0\n",
+    "    total <- nrow(municipality_number)\n",
+    "    counter <- 1\n",
     "    \n",
     "    #check if the folders already exists\n",
     "    if (file.exists('Downloaded')){\n",
@@ -212,32 +212,34 @@
     "    \n",
     "    if (file.exists(gsub(\" \", \"\", paste('Downloaded/', deparse(substitute(municipality_number)))))){\n",
     "        print(paste('The', deparse(substitute(municipality_number),' folder already existed')))\n",
+    "    \n",
     "    } else {\n",
     "        dir.create(gsub(\" \", \"\", paste('Downloaded/', deparse(substitute(municipality_number)))))\n",
+    "    \n",
     "    }\n",
     "    \n",
-    "    # loop to download each municipality in the data frame \n",
+    "    # loop to download each municipality in the data frame\n",
     "    for (i in municipality_number$Cod_Mun){\n",
+    "        # print the number of municipalities downloaded\n",
+    "        print(paste(\"Downloaded\", counter, \"municipalities of\", total))\n",
+    "        # add one to the counter so the user know at which municipality the program is.\n",
     "        \n",
-    "        # add one to the counter so the user know at which municipality the program is. \n",
     "        counter = counter + 1\n",
     "        \n",
     "        # get the url for each number\n",
     "        url <- gsub(\" \", \"\", paste('http://www.datigeo-piem-download.it/static/regp01/BDTRE2021_VECTOR/BDTRE_DATABASE_GEOTOPOGRAFICO_2021-LIMI_COMUNI_10_GAIMSDWL-',i,'-EPSG32632-SHP.zip'))\n",
     "        \n",
-    "        # create the folder for each number \n",
+    "        # create the folder for each number\n",
     "        dir <- gsub(\" \", \"\", paste(i, '.zip'))\n",
     "        \n",
-    "        # downalod and unzip the data for the number\n",
+    "        # download and unzip the data for the number\n",
     "        download.file(url, dir, mode=\"wb\")\n",
     "        unzip(dir, exdir = gsub(\" \", \"\", paste('Downloaded/', deparse(substitute(municipality_number)), \"/\", i)))\n",
     "        \n",
-    "        # delete the zip when unzip to the folder\n",
+    "        # delete the zip file after unzip to the folder\n",
     "        file.remove(dir)\n",
-    "        \n",
-    "        # print the number of municipalities downloaded\n",
-    "        print(paste(\"Downloaded\", counter, \"municipalities of\", total))\n",
-    "    }\n",
+    "\n",
+    "  }\n",
     "}"
    ]
   },
@@ -297,12 +299,11 @@
     "# function to download just the interested municipalities\n",
     "\n",
     "download_selected_mun <- function(user_list) {\n",
-    "    \n",
     "    user_selection <- data.frame(user_list)\n",
     "    colnames(user_selection) <- c(\"Cod_Mun\")\n",
-    "\n",
+    "    \n",
     "    return(user_selection)\n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -1053,7 +1054,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot(nc_merge[0])"
+    "plot(nc_merge)"
    ]
   },
   {
@@ -1203,6 +1204,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2bc5f8a",
+   "metadata": {},
+   "source": [
+    "### Apply the percent_urbanized function on specific municipalities\n",
+    "\n",
+    "The user can also perform the same calculation for specific municipalities already downloaded, but as input, there must be a variable composed in the same way as the dataframe obtained by the get_municipality_codes function. To do this, you need to filter the list obtained from the same function for the istat code of the municipalities on which you want to make the calculation. Below is an example of how to do it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce95c585",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the data fram of the province where the municiplaity is \n",
+    "mun_code <- get_municipality_codes('001')\n",
+    "\n",
+    "# filter just the municipality\n",
+    "selected_mun_urban <- mun_code[which(mun_code$Cod_Mun == '001001'), ]\n",
+    "\n",
+    "# download the desired municipality\n",
+    "user_selection <- download_selected_mun(\"001001\")\n",
+    "download_municipality(user_selection)\n",
+    "\n",
+    "# fit the variable inside the percent_urbanized function\n",
+    "data_frame_data2 <- percent_urbanized(selected_mun_urban)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "31cf878e",
    "metadata": {},
    "source": [
@@ -1318,7 +1350,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.0.5"
+   "version": "4.1.1"
   }
  },
  "nbformat": 4,
